<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <TextView android:text="0 bits in cache" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCache" />

    <TextView
        android:id="@+id/tvSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/label_space_deriv"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/etSpace"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/tvSpace"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView android:text="@string/label_time_deriv" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etSpace"
        android:textSize="16dp"
        android:id="@+id/tvTime"/>

    <EditText
        android:id="@+id/etTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/tvTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView android:text="@string/label_time_mult" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etTime"
        android:textSize="16dp"
        android:id="@+id/tvTimeMult"/>

    <EditText
        android:id="@+id/etTimeMult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/tvTimeMult"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView android:text="@string/label_hash" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etTimeMult"
        android:textSize="16dp"
        android:id="@+id/tvHash"/>

    <Switch
        android:id="@+id/swHash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2"
        android:scaleY="2"
        android:layout_margin="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvHash"
        android:layout_marginTop="6dp" />

    <TextView android:text="@string/label_control" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/swHash"
        android:textSize="16dp"
        android:id="@+id/tvControl"/>

    <Switch
        android:id="@+id/swControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2"
        android:scaleY="2"
        android:layout_margin="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvControl"
        android:layout_marginTop="6dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/save_btn"
        android:id="@+id/btn_save"/>

</RelativeLayout>
